// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card demos 📸 renders ./packages/card/src/demos/actions.tsx correctly 1`] = `
<div
  class="ant-pro-card"
  style="width: 300px;"
>
  <div
    class="ant-pro-card-header"
  >
    <div
      class="ant-pro-card-title"
    >
      Actions 操作项
    </div>
    <div
      class="ant-pro-card-extra"
    />
  </div>
  <div
    class="ant-pro-card-body"
  >
    <div>
      Card content
    </div>
    <div>
      Card content
    </div>
    <div>
      Card content
    </div>
  </div>
  <ul
    class="ant-pro-card-actions"
  >
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <span
          aria-label="setting"
          class="anticon anticon-setting"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="setting"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <span
          aria-label="edit"
          class="anticon anticon-edit"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="edit"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      style="width: 33.333333333333336%;"
    >
      <span>
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/basic.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card"
    style="width: 300px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        <div
          class="ant-pro-core-label-tip"
        >
          默认尺寸
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ant-pro-card-extra"
      >
        extra
      </div>
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div>
        Card content
      </div>
      <div>
        Card content
      </div>
      <div>
        Card content
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-size-small"
    style="width: 300px; margin-top: 24px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        <div
          class="ant-pro-core-label-tip"
        >
          小尺寸卡片
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ant-pro-card-extra"
      >
        extra
      </div>
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div>
        Card content
      </div>
      <div>
        Card content
      </div>
      <div>
        Card content
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/bordered.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-border"
  style="width: 300px;"
>
  <div
    class="ant-pro-card-header"
  >
    <div
      class="ant-pro-card-title"
    >
      <div
        class="ant-pro-core-label-tip"
      >
        标题
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-pro-card-extra"
    >
      extra
    </div>
  </div>
  <div
    class="ant-pro-card-body"
  >
    内容
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/collapsible.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-collapse"
  >
    <div
      class="ant-pro-card-header ant-pro-card-header-border"
    >
      <div
        class="ant-pro-card-title ant-pro-card-title-collapsible"
      >
        <span
          aria-label="right"
          class="anticon anticon-right ant-pro-card-collapsible-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
        可折叠
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      内容
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-collapse"
    style="margin-top: 16px;"
  >
    <div
      class="ant-pro-card-header ant-pro-card-header-border"
    >
      <div
        class="ant-pro-card-title"
      >
        可折叠-受控自定义
      </div>
      <div
        class="ant-pro-card-extra"
      >
        <span
          aria-label="right"
          class="anticon anticon-right"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-pro-card-body"
    >
      内容
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/colspan.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-contain-card ant-pro-card-ghost"
  >
    <div
      class="ant-pro-card-body ant-pro-card-body-column"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan - 24
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-span-12 ant-pro-card-border"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan - 12
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-span-8 ant-pro-card-border"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan - 8
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-span-0 ant-pro-card-border"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan - 0
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        24栅格
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-span-12 ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan-12
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-span-6 ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan-6
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-span-6 ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan-6
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card ant-pro-card-ghost"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="width: 200px; flex-shrink: 0; margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          colSpan - 200px
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Auto
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card ant-pro-card-ghost"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Auto
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="width: 30%; flex-shrink: 0;"
      >
        <div
          class="ant-pro-card-body"
        >
          colSpan - 30%
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/divider.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-contain-card"
>
  <div
    class="ant-pro-card-header"
  >
    <div
      class="ant-pro-card-title"
    >
      核心指标
    </div>
    <div
      class="ant-pro-card-extra"
    />
  </div>
  <div
    class="ant-pro-card-body"
    style="padding: 0px;"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            今日UV
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                79
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card-divider ant-pro-card-divider-line"
    />
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            冻结金额
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                112,893
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card-divider ant-pro-card-divider-line"
    />
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            信息完整度
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                93
              </span>
            </span>
            <span
              class="ant-statistic-content-suffix"
            >
              / 100
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            冻结金额
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                112,893
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/group.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-contain-card ant-pro-card-ghost"
>
  <div
    class="ant-pro-card-header"
  >
    <div
      class="ant-pro-card-title ant-pro-card-title-collapsible"
    >
      <span
        aria-label="right"
        class="anticon anticon-right ant-pro-card-collapsible-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="transform: rotate(90deg);"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
      卡片组展开
    </div>
    <div
      class="ant-pro-card-extra"
    />
  </div>
  <div
    class="ant-pro-card-body"
  >
    <div
      class="ant-pro-card ant-pro-card-border"
      style="margin-right: 8px;"
    >
      <div
        class="ant-pro-card-body ant-pro-card-body-center"
      >
        卡片内容
      </div>
    </div>
    <div
      class="ant-pro-card ant-pro-card-border"
      style="margin-right: 8px;"
    >
      <div
        class="ant-pro-card-body ant-pro-card-body-center"
      >
        卡片内容
      </div>
    </div>
    <div
      class="ant-pro-card ant-pro-card-border"
    >
      <div
        class="ant-pro-card-body ant-pro-card-body-center"
      >
        卡片内容
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/gutter.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-contain-card"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="width: 300px; flex-shrink: 0; margin-right: 16px; margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-header ant-pro-card-header-border"
        >
          <div
            class="ant-pro-card-title"
          >
            title
          </div>
          <div
            class="ant-pro-card-extra"
          />
        </div>
        <div
          class="ant-pro-card-body"
        >
          300px
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Auto
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card"
    style="margin-top: 16px;"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Responsive
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Responsive
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Responsive
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card"
    style="margin-top: 16px;"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Auto
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 16px;"
      >
        <div
          class="ant-pro-card-body"
        >
          Auto
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body"
        >
          Auto
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/headerBordered.tsx correctly 1`] = `
<div
  class="ant-pro-card"
  style="width: 300px;"
>
  <div
    class="ant-pro-card-header ant-pro-card-header-border"
  >
    <div
      class="ant-pro-card-title"
    >
      <div
        class="ant-pro-core-label-tip"
      >
        标题
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-pro-card-extra"
    >
      extra
    </div>
  </div>
  <div
    class="ant-pro-card-body"
  >
    内容
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/headless.tsx correctly 1`] = `
<div
  class="ant-pro-card"
  style="width: 300px;"
>
  <div
    class="ant-pro-card-body"
  >
    内容
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/hoverable.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-border ant-pro-card-hoverable"
  style="width: 300px;"
>
  <div
    class="ant-pro-card-body"
  >
    内容
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/inner.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-border ant-pro-card-contain-card"
  >
    <div
      class="ant-pro-card-header ant-pro-card-header-border"
    >
      <div
        class="ant-pro-card-title"
      >
        横向内部卡片
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border ant-pro-card-type-inner"
        style="margin-right: 16px;"
      >
        <div
          class="ant-pro-card-header ant-pro-card-header-border"
        >
          <div
            class="ant-pro-card-title"
          >
            内部卡片标题
          </div>
          <div
            class="ant-pro-card-extra"
          />
        </div>
        <div
          class="ant-pro-card-body"
        >
          内部卡片内容
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border ant-pro-card-type-inner"
      >
        <div
          class="ant-pro-card-header ant-pro-card-header-border"
        >
          <div
            class="ant-pro-card-title"
          >
            内部卡片标题
          </div>
          <div
            class="ant-pro-card-extra"
          />
        </div>
        <div
          class="ant-pro-card-body"
        >
          内部卡片内容
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-border ant-pro-card-contain-card"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-header ant-pro-card-header-border"
    >
      <div
        class="ant-pro-card-title"
      >
        竖向内部卡片
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body ant-pro-card-body-column"
    >
      <div
        class="ant-pro-card ant-pro-card-border ant-pro-card-type-inner"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-header ant-pro-card-header-border"
        >
          <div
            class="ant-pro-card-title"
          >
            内部卡片标题
          </div>
          <div
            class="ant-pro-card-extra"
          />
        </div>
        <div
          class="ant-pro-card-body"
        >
          内部卡片内容
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border ant-pro-card-type-inner"
        style="margin-bottom: 16px;"
      >
        <div
          class="ant-pro-card-header ant-pro-card-header-border"
        >
          <div
            class="ant-pro-card-title"
          >
            内部卡片标题
          </div>
          <div
            class="ant-pro-card-extra"
          />
        </div>
        <div
          class="ant-pro-card-body"
        >
          内部卡片内容
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/layout.tsx correctly 1`] = `
<div
  class="ant-pro-card"
  style="width: 300px; height: 200px;"
>
  <div
    class="ant-pro-card-header"
  >
    <div
      class="ant-pro-card-title"
    >
      标题
    </div>
    <div
      class="ant-pro-card-extra"
    >
      extra
    </div>
  </div>
  <div
    class="ant-pro-card-body ant-pro-card-body-center"
  >
    内容垂直居中
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/loading.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-loading"
    style="width: 300px;"
  >
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card-loading-content"
      >
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-22"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-8"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-15"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-6"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-18"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-13"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-9"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-4"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-3"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-16"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-pro-card-loading-block"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-loading"
    style="width: 300px; margin-top: 16px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        自定义 Loading
      </div>
      <div
        class="ant-pro-card-extra"
      >
        extra
      </div>
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div>
        加载中
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/responsive.tsx correctly 1`] = `
Array [
  <div
    class="ant-pro-card ant-pro-card-contain-card"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        24栅格
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Col
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Col
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Col
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        指定宽度px
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Col
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Auto
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-pro-card ant-pro-card-contain-card"
    style="margin-top: 8px;"
  >
    <div
      class="ant-pro-card-header"
    >
      <div
        class="ant-pro-card-title"
      >
        指定宽度百分比
      </div>
      <div
        class="ant-pro-card-extra"
      />
    </div>
    <div
      class="ant-pro-card-body"
    >
      <div
        class="ant-pro-card ant-pro-card-border"
        style="margin-right: 8px;"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Auto
        </div>
      </div>
      <div
        class="ant-pro-card ant-pro-card-border"
      >
        <div
          class="ant-pro-card-body ant-pro-card-body-center"
        >
          Col - 百分比
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`card demos 📸 renders ./packages/card/src/demos/split.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-border ant-pro-card-contain-card ant-pro-card-split"
>
  <div
    class="ant-pro-card-header ant-pro-card-header-border"
  >
    <div
      class="ant-pro-card-title"
    >
      复杂切分
    </div>
    <div
      class="ant-pro-card-extra"
    >
      2019年9月28日
    </div>
  </div>
  <div
    class="ant-pro-card-body"
  >
    <div
      class="ant-pro-card ant-pro-card-split-vertical ant-pro-card-contain-card ant-pro-card-split"
      style="border-radius: 0;"
    >
      <div
        class="ant-pro-card-body ant-pro-card-body-column"
      >
        <div
          class="ant-pro-card ant-pro-card-split-horizontal ant-pro-card-contain-card ant-pro-card-split"
          style="border-radius: 0;"
        >
          <div
            class="ant-pro-card-body ant-pro-card-body-column"
          >
            <div
              class="ant-pro-card ant-pro-card-split-horizontal ant-pro-card-contain-card ant-pro-card-split"
              style="border-radius: 0;"
            >
              <div
                class="ant-pro-card-body"
              >
                <div
                  class="ant-pro-card ant-pro-card-split-vertical"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-pro-card-header"
                  >
                    <div
                      class="ant-pro-card-title"
                    >
                      昨日全部流量
                    </div>
                    <div
                      class="ant-pro-card-extra"
                    />
                  </div>
                  <div
                    class="ant-pro-card-body"
                  >
                    123
                  </div>
                </div>
                <div
                  class="ant-pro-card ant-pro-card-split-vertical"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-pro-card-header"
                  >
                    <div
                      class="ant-pro-card-title"
                    >
                      本月累计流量
                    </div>
                    <div
                      class="ant-pro-card-extra"
                    />
                  </div>
                  <div
                    class="ant-pro-card-body"
                  >
                    234
                  </div>
                </div>
                <div
                  class="ant-pro-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-pro-card-header"
                  >
                    <div
                      class="ant-pro-card-title"
                    >
                      今年累计流量
                    </div>
                    <div
                      class="ant-pro-card-extra"
                    />
                  </div>
                  <div
                    class="ant-pro-card-body"
                  >
                    345
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-pro-card ant-pro-card-contain-card ant-pro-card-split"
              style="border-radius: 0;"
            >
              <div
                class="ant-pro-card-body"
              >
                <div
                  class="ant-pro-card ant-pro-card-split-vertical"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-pro-card-header"
                  >
                    <div
                      class="ant-pro-card-title"
                    >
                      运行中试验
                    </div>
                    <div
                      class="ant-pro-card-extra"
                    />
                  </div>
                  <div
                    class="ant-pro-card-body"
                  >
                    12/56
                  </div>
                </div>
                <div
                  class="ant-pro-card"
                  style="border-radius: 0;"
                >
                  <div
                    class="ant-pro-card-header"
                  >
                    <div
                      class="ant-pro-card-title"
                    >
                      历史试验总数
                    </div>
                    <div
                      class="ant-pro-card-extra"
                    />
                  </div>
                  <div
                    class="ant-pro-card-body"
                  >
                    134 个
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-pro-card"
          style="border-radius: 0;"
        >
          <div
            class="ant-pro-card-header"
          >
            <div
              class="ant-pro-card-title"
            >
              流量趋势
            </div>
            <div
              class="ant-pro-card-extra"
            />
          </div>
          <div
            class="ant-pro-card-body"
          >
            <div>
              图表
            </div>
            <div>
              图表
            </div>
            <div>
              图表
            </div>
            <div>
              图表
            </div>
            <div>
              图表
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card"
      style="border-radius: 0;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          流量占用情况
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        右侧内容
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/split2.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-border ant-pro-card-contain-card ant-pro-card-split"
>
  <div
    class="ant-pro-card-header ant-pro-card-header-border"
  >
    <div
      class="ant-pro-card-title"
    >
      左右分栏带标题
    </div>
    <div
      class="ant-pro-card-extra"
    >
      2019年9月28日
    </div>
  </div>
  <div
    class="ant-pro-card-body"
  >
    <div
      class="ant-pro-card ant-pro-card-split-vertical"
      style="width: 300px; flex-shrink: 0; border-radius: 0;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          左侧详情
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        左侧内容
      </div>
    </div>
    <div
      class="ant-pro-card"
      style="border-radius: 0;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          流量占用情况
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        <div
          style="height: 360px;"
        >
          右侧内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/split23.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-contain-card ant-pro-card-split"
>
  <div
    class="ant-pro-card-body"
  >
    <div
      class="ant-pro-card ant-pro-card-split-vertical"
      style="width: 30%; flex-shrink: 0; border-radius: 0;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          左侧详情
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        左侧内容
      </div>
    </div>
    <div
      class="ant-pro-card"
      style="border-radius: 0;"
    >
      <div
        class="ant-pro-card-header ant-pro-card-header-border"
      >
        <div
          class="ant-pro-card-title"
        >
          左右分栏子卡片带标题
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        <div
          style="height: 360px;"
        >
          右侧内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/steps-v.tsx correctly 1`] = `
<div
  class="ant-pro-card ant-pro-card-border ant-pro-card-contain-card ant-pro-card-split"
>
  <div
    class="ant-pro-card-body"
  >
    <div
      class="ant-pro-card ant-pro-card-split-vertical"
      style="width: 25%; flex-shrink: 0; border-radius: 0;"
    >
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-steps ant-steps-vertical ant-steps-small"
          style="height: 320px;"
        >
          <div
            class="ant-steps-item ant-steps-item-process ant-steps-item-active"
          >
            <div
              class="ant-steps-item-container"
            >
              <div
                class="ant-steps-item-tail"
              />
              <div
                class="ant-steps-item-icon"
              >
                <span
                  class="ant-steps-icon"
                >
                  1
                </span>
              </div>
              <div
                class="ant-steps-item-content"
              >
                <div
                  class="ant-steps-item-title"
                >
                  填写基本信息
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-steps-item ant-steps-item-wait"
          >
            <div
              class="ant-steps-item-container"
            >
              <div
                class="ant-steps-item-tail"
              />
              <div
                class="ant-steps-item-icon"
              >
                <span
                  class="ant-steps-icon"
                >
                  2
                </span>
              </div>
              <div
                class="ant-steps-item-content"
              >
                <div
                  class="ant-steps-item-title"
                >
                  配置模板
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-steps-item ant-steps-item-wait"
          >
            <div
              class="ant-steps-item-container"
            >
              <div
                class="ant-steps-item-tail"
              />
              <div
                class="ant-steps-item-icon"
              >
                <span
                  class="ant-steps-icon"
                >
                  3
                </span>
              </div>
              <div
                class="ant-steps-item-content"
              >
                <div
                  class="ant-steps-item-title"
                >
                  配置访问
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-steps-item ant-steps-item-wait"
          >
            <div
              class="ant-steps-item-container"
            >
              <div
                class="ant-steps-item-tail"
              />
              <div
                class="ant-steps-item-icon"
              >
                <span
                  class="ant-steps-icon"
                >
                  4
                </span>
              </div>
              <div
                class="ant-steps-item-content"
              >
                <div
                  class="ant-steps-item-title"
                >
                  配置部署和调度
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-steps-item ant-steps-item-wait"
          >
            <div
              class="ant-steps-item-container"
            >
              <div
                class="ant-steps-item-tail"
              />
              <div
                class="ant-steps-item-icon"
              >
                <span
                  class="ant-steps-icon"
                >
                  5
                </span>
              </div>
              <div
                class="ant-steps-item-content"
              >
                <div
                  class="ant-steps-item-title"
                >
                  预览
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-card"
      style="border-radius: 0;"
    >
      <div
        class="ant-pro-card-header"
      >
        <div
          class="ant-pro-card-title"
        >
          流量占用情况
        </div>
        <div
          class="ant-pro-card-extra"
        />
      </div>
      <div
        class="ant-pro-card-body"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn"
              disabled=""
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/tabs.tsx correctly 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="margin-bottom: 16px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      Tab position：
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-select ant-select-single ant-select-show-arrow"
      >
        <div
          class="ant-select-selector"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="ant-select-selection-item"
            title="top"
          >
            top
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-card"
  >
    <div
      class="ant-pro-card-tabs"
    >
      <div
        class="ant-tabs ant-tabs-top"
      >
        <div
          class="ant-tabs-nav"
          role="tablist"
        >
          <div
            class="ant-tabs-nav-wrap"
          >
            <div
              class="ant-tabs-nav-list"
              style="transform: translate(0px, 0px);"
            >
              <div
                class="ant-tabs-tab"
              >
                <div
                  aria-controls="rc-tabs-test-panel-tab1"
                  aria-selected="false"
                  class="ant-tabs-tab-btn"
                  id="rc-tabs-test-tab-tab1"
                  role="tab"
                  tabindex="0"
                >
                  产品一
                </div>
              </div>
              <div
                class="ant-tabs-tab ant-tabs-tab-active"
              >
                <div
                  aria-controls="rc-tabs-test-panel-tab2"
                  aria-selected="true"
                  class="ant-tabs-tab-btn"
                  id="rc-tabs-test-tab-tab2"
                  role="tab"
                  tabindex="0"
                >
                  产品二
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
          >
            <button
              aria-controls="rc-tabs-test-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-hidden="true"
              class="ant-tabs-nav-more"
              id="rc-tabs-test-more"
              style="visibility: hidden; order: 1;"
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="anticon anticon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="ant-tabs-content-holder"
        >
          <div
            class="ant-tabs-content ant-tabs-content-top"
          >
            <div
              aria-hidden="true"
              aria-labelledby="rc-tabs-test-tab-tab1"
              class="ant-tabs-tabpane ant-pro-card-tabpane"
              id="rc-tabs-test-panel-tab1"
              role="tabpanel"
              style="display: none;"
              tabindex="-1"
            />
            <div
              aria-hidden="false"
              aria-labelledby="rc-tabs-test-tab-tab2"
              class="ant-tabs-tabpane ant-tabs-tabpane-active ant-pro-card-tabpane"
              id="rc-tabs-test-panel-tab2"
              role="tabpanel"
              tabindex="0"
            >
              <div
                class="ant-pro-card"
              >
                <div
                  class="ant-pro-card-body"
                >
                  内容二
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`card demos 📸 renders ./packages/card/src/demos/tabs-card.tsx correctly 1`] = `
<div
  class="ant-pro-card"
>
  <div
    class="ant-pro-card-tabs"
  >
    <div
      class="ant-tabs ant-tabs-top ant-tabs-card"
    >
      <div
        class="ant-tabs-nav"
        role="tablist"
      >
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-list"
            style="transform: translate(0px, 0px);"
          >
            <div
              class="ant-tabs-tab ant-tabs-tab-active"
            >
              <div
                aria-controls="rc-tabs-test-panel-tab1"
                aria-selected="true"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-tab1"
                role="tab"
                tabindex="0"
              >
                产品一
              </div>
            </div>
            <div
              class="ant-tabs-tab"
            >
              <div
                aria-controls="rc-tabs-test-panel-tab2"
                aria-selected="false"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-tab2"
                role="tab"
                tabindex="0"
              >
                产品二
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="rc-tabs-test-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ant-tabs-nav-more"
            id="rc-tabs-test-more"
            style="visibility: hidden; order: 1;"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-tabs-content-holder"
      >
        <div
          class="ant-tabs-content ant-tabs-content-top"
        >
          <div
            aria-hidden="false"
            aria-labelledby="rc-tabs-test-tab-tab1"
            class="ant-tabs-tabpane ant-tabs-tabpane-active ant-pro-card-tabpane"
            id="rc-tabs-test-panel-tab1"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="ant-pro-card"
            >
              <div
                class="ant-pro-card-body"
              >
                内容一
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-labelledby="rc-tabs-test-tab-tab2"
            class="ant-tabs-tabpane ant-pro-card-tabpane"
            id="rc-tabs-test-panel-tab2"
            role="tabpanel"
            style="display: none;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
